--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.8.4",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
@@ -32,6 +36,7 @@
     "eslint-config-next": "14.0.3",
     "firebase": "^10.7.1",
     "geist": "^1.5.1",
+    "jspdf": "^3.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
@@ -41,17 +46,20 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-paystack": "^6.0.0",
     "sonner": "^1.2.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.28.3",
+    "@types/offscreencanvas": "^2019.7.3",
     "babel-loader": "^10.0.0"
   }
 }
