--- a/package.json
+++ b/package.json
@@ -58,11 +58,11 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "qrcode": "^1.5.4",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.1",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
     "react-paystack": "^6.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
