--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-day-picker": "9.8.0",
